# br_brain

./: CMakeLists.txt  README.md  package.xml
config/: .~lock.searchgrid_arena.csv#  .~lock.searchgrid_spot_small.csv#  searchgrid_arena.csv  searchgrid_arena.ods  searchgrid_spot_small.csv  searchgrid_spot_small.ods  zones.csv  zones.ods
include/br_brain/: brick_collector_base.hpp  brick_collector_simple.hpp  robot_parameters.h
launch/: budget_roomba_brain.launch.xml
src/: brain.cpp  search_grid_follower.cpp  valid_map_pub.cpp
